Issue #25455: Fixed a crash in repr of cElementTree.Element with recursive tag.